Java-9: rewrite deprecates: newInstance, XMLReader, Field.canAccess, etc.